app/src/components/forms/common.styl
@import '~src/styles/definitions'

.input-group {
  flex-layout: column
  spacing-vertical: $gap-sm
  margin-bottom: $gap-lg
}

.input-group label:empty {
  display: none
}

.input-group .input {
  border: 1px solid $color-muted
  border-radius: $radius-sm
  child-radius-horizontal: $radius-sm

  button {
    stateful-background: $background-darken
    stateful-color: $color-muted
  }

  label {
    width: 4rem
    text-align: center
  }
}

.input-group div.input {
  display: flex
  align-items: center
}

.input-row {
  flex-layout: row
  align-items: center
  spacing-horizontal: $gap-sm
}

.input-row input,
.input-row .input {
  flex: 1
  min-width: 0
}

.input-row button {
  background: transparent
  stateful-color: $color-muted
}

.input-row span {
  display: inline-block
}

